<resources>
    <string name="app_name">ဟာသ ပေဒသာ</string>
    <string name="app_name_eng">HaTha Pataythar</string>
    <string name="action_settings">Settings</string>

    <string name="joke1_title">အညီအမၽွ</string>
    <string name="joke1_body">ေနာက္တစ္ႏွစ္ေပါ့\n လင္မယား ၂ ေယာက္စကားမ်ားရန္ျဖစ္ရာမွကြာရွင္းျပတ္ဆဲရန္ တရား႐ုံးတြင္စီစဥ္ေနၾကသည္\nတရားသူႀကီး : မင္းတို႔မွာကေလး ၃ ေယာက္ရွိတာဘယ္လိုခြဲမလဲ?\nလင္မယား ၂ ေယာက္ေတြေဝသြားၿပီးမိနစ္အနည္းငယ္ၾကာစဥ္းစားကာ \'တရားသူႀကီးမင္းခင္ဗ်ား က်ေနာ္တို႔တစ္ႏွစ္တာအခ်ိန္အတြင္း ေနာက္တစ္ေယာက္ထပ္ေမြးၿပီးျပန္လာခဲ့ပါ့မယ္\' ဟုေျပာလိုက္သည္။\n ၉ လခန႔္ၾကာေသာ္ အႁမႊာပူးေလးေမြးေလသည္။</string>

    <string name="joke2_title">အလၽွင္မလိုပါ</string>
    <string name="joke2_body">ေျပးေနေသာ ပီတာေလး ေနာက္ကို ရဲသား တစ္ဦး ေျပးလိုက္ေနသည္ကို၊ လမ္းေထာင့္တြင္ရပ္ေနေသာ ရဲမွုးႀကီး ေတြ႕သျဖင့္ လွမ္းေမးလိုက္သည္။ \n\"ေဟ့ . .ရဲသား . . မင္းဘာလို႔ ဟိုကေလး ေနာက္ကို အတင္း ေျပးလိုက္ေနရတာလဲ\"\n\"သူ ကၽြန္ေတာ့္ကို . . ေနာက္ ဆယ့္ငါးမိနစ္ၾကာရင္ ဖင္ကို လာနမ္းလွည့္လို႔ ေျပာလို႔ပါ ရဲမွုးႀကီး\"\n\"ေနာက္ဆယ့္ငါးမိနစ္မွဆို အခ်ိန္ရသားပဲ၊ ဘာလို႔ အတင္းေျပးလိုက္ေနတာလဲဲ\"</string>


    <string name="joke3_title">တိုင္းျပည္ကို ေခ်ာက္ထဲမက်ေအာင္ ကယ္လိုက္လို႔ပါ</string>
    <string name="joke3_body">ဆင္းရဲရာမွ အလြန္ခ်မ္းသာလာေသာ သေဌးမ်ားကို သတင္းတစ္ခုမွ အင္တာဗ်ဴးသည္။\nU.S သေဌး။ ။ ကၽြန္ေတာ္ နယူးေယာက္ကိုစေရာက္တုန္းက ေတာ္ေတာ္ဆင္းရဲတာဗ်။ လက္ထဲမွာ ဆင့္ ၅၀ ပဲပါတာနဲ႔ ပန္းသီးတစ္လုံးဝယ္တယ္။ ၁ ေဒၚလာနဲ႔ျပန္ေရာင္းတယ္။ ေနာက္ပန္းသီးႏွစ္လုံး ဝယ္တယ္ ထပ္ေရာင္းတယ္်\nသတင္းေထာက္။ ။ ဒီလိုနဲ႔မ်ားလာတာေပါ့\nU.S သေဌး။ ။ မဟုတ္ဘူးဗ် ပန္းသီးေရာင္းေနရင္း အေဒၚဆုံးသြားလို႔ ေဒၚလာတစ္သန္း အေမြရတယ္ေလ\n---------------------------------------\nRussia သေဌး။ ။ ကၽြန္ေတာ္အခုေနတဲ့ စံအိမ္ႀကီးက အရင္က ကၽြန္ေတာ္ ဒရိုက္ဘာလုပ္ခဲ့တာေပါ့။\nသတင္းေထာက္။ ။ ေအာ္ ဒရိုက္ဘာဘဝကေန သေဌးျဖစ္ေအာင္ ဘယ္လိုလုပ္ခဲ့ရလဲ။\nRussia သေဌး။ ။ စံအိမ္ပိုင္ရွင္သေဌးႀကီးရဲ့ သမီးနဲ႔ညားသြားတယ္ေလ\n---------------------------------------\nသတင္းေထာက္စိတ္ပ်က္လက္ပ်က္ႏွင့္ျမန္မာနိုင္ငံေရာက္လာသည္။\nသတင္းေထာက္။ ။ ဟိုေလ ခုလို က်ိက်ိတက္ခ်မ္းသာလာတာဘယ္လိုခ်မ္းသာလာလဲသိခ်င္လို႔ပါ။ဘဘႀကီး လက္ထဲက ဖတ္လက္စ စာအုပ္ကိုခ်ၿပီး မ်က္ေမွာင္ၾကဳံ႕ၾကည့္သည္။\nဘဘႀကီး။ ။ ဒါကရွင္းပါတယ္။ တိုင္းျပည္ေခ်ာက္ထဲမက်ေအာင္ ကယ္လိုက္ပါတယ္ \n</string>

    <string name="radio_button1">အရမ္းရီရတယ္</string>
    <string name="radio_button2">ရီရတယ္</string>

    <string name="button1">အရင္ဟာျပပါ</string>
    <string name="button2">ေနာက္တစ္ခုု</string>
    <string name="msg_no_more_joke">ဟာသမ်ား မရွိေတာ့ပါ</string>
</resources>
