<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragments.JokeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium_2"
        android:orientation="vertical"
        tools:context=".fragments.JokeFragment">

        <com.example.android.hatha_pataythar.components.textviews.MMTextView
            android:id="@+id/tv_joke_title"
            android:textSize="@dimen/text_regular_3x"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:lineSpacingMultiplier="1.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/joke1_title"/>

        <ImageView
            android:id="@+id/iv_joke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_joke_title"
            android:layout_marginTop="@dimen/margin_medium_2"
            tools:src="@drawable/joke_1"
            android:scaleType="centerCrop"/>

        <com.example.android.hatha_pataythar.components.textviews.MMTextView
            android:id="@+id/tv_joke_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_joke"
            android:lineSpacingMultiplier="1.4"
            tools:text="@string/joke1_body"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:fontFamily="sans-serif-light"/>

        <RadioGroup
            android:id="@+id/rg_funny_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_joke_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal">

            <com.example.android.hatha_pataythar.components.radiobuttons.MMRadioButton
                android:id="@+id/rb_very_funny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:text="@String/radio_button1" />

            <com.example.android.hatha_pataythar.components.radiobuttons.MMRadioButton
                android:id="@+id/rb_funny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:text="@string/radio_button2" />

        </RadioGroup>
    </RelativeLayout>
</ScrollView>





